WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30327
[Qt] Fix build break for Qt 4.4
https://bugs.webkit.org/show_bug.cgi?id=30327
Summary
[Qt] Fix build break for Qt 4.4
Fumitoshi Ukai
Reported
2009-10-13 01:19:44 PDT
WebKit/Qt build fails with Qt 4.4, at least the following two errors. ../../../WebCore/platform/graphics/qt/GraphicsContextQt.cpp: In member function ‘void WebCore::GraphicsContext::clipOut(const WebCore::Path&)’: ../../../WebCore/platform/graphics/qt/GraphicsContextQt.cpp:1071: error: no match for ‘operator&’ in ‘clippedOut & newClip’ operator& for QPainterPath was introduced in Qt 4.5. I believe it is equivalent to intersected() that exists in Qt 4.4 ../../../WebCore/plugins/qt/PluginViewQt.cpp: In member function ‘virtual void WebCore::PluginView::paint(WebCore::GraphicsContext*, const WebCore::IntRect&)’: ../../../WebCore/plugins/qt/PluginViewQt.cpp:182: error: ‘fromX11Pixmap’ is not a member of ‘QPixmap’ ../../../WebCore/plugins/qt/PluginViewQt.cpp:182: error: ‘ExplicitlyShared’ is not a member of ‘QPixmap’ QPixmap::fromX11Pixmap was introduced in Qt 4.5, and I couldn't find any fallback in Qt 4.4..
Attachments
proposed patch
(4.33 KB, patch)
2009-12-28 09:49 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-12-28 09:49:10 PST
Created
attachment 45560
[details]
proposed patch Enables building (on Linux requires to turn off NPAPI support) with Qt 4.4. I think we should keep the 4.4 support around in the trunk for a while. 4.4.3 was released in 28 September 2008, which was not that long ago and at the moment it does not seems like a big effort to maintain most QtWebKit features for Qt 4.4 as well.
WebKit Review Bot
Comment 2
2009-12-28 09:51:12 PST
style-queue ran check-webkit-style on
attachment 45560
[details]
without any errors.
Adam Barth
Comment 3
2009-12-28 10:22:05 PST
Comment on
attachment 45560
[details]
proposed patch In general, you can land build fixes without review.
WebKit Commit Bot
Comment 4
2009-12-28 11:15:29 PST
Comment on
attachment 45560
[details]
proposed patch Clearing flags on attachment: 45560 Committed
r52601
: <
http://trac.webkit.org/changeset/52601
>
WebKit Commit Bot
Comment 5
2009-12-28 11:15:34 PST
All reviewed patches have been landed. Closing bug.
Kenneth Rohde Christiansen
Comment 6
2009-12-29 06:45:26 PST
Why are we doing patches for supporting 4.4 which we decided to not support anymore?
Eric Seidel (no email)
Comment 7
2009-12-29 09:23:00 PST
I didn't realize (and I would assume Fumitoshi didn't realize) that we were not supporting GCC 4.4. Do we have a webkit-dev thread on the subject I should (re-)read?
Eric Seidel (no email)
Comment 8
2009-12-29 09:24:14 PST
Oh, sorry, I was confused. This is Qt 4.4. Not GCC 4.4. My retract my previous comment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug